WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304349
[OpenXR] XR_ANDROID_* extensions are never enabled
https://bugs.webkit.org/show_bug.cgi?id=304349
Summary
[OpenXR] XR_ANDROID_* extensions are never enabled
Sergio Villar Senin
Reported
2025-12-17 12:03:44 PST
The XR_ANDROID_* extensions used for hit testing are never enabled at instance creation time and thus never used even if the runtime supports them. What is worst, that causes crashes because the code assumes that available extensions are always enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2025-12-17 12:08:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55579
EWS
Comment 2
2025-12-18 01:20:07 PST
Committed
304662@main
(3200982f029e): <
https://commits.webkit.org/304662@main
> Reviewed commits have been landed. Closing PR #55579 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-18 01:21:13 PST
<
rdar://problem/166772654
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug