[OpenXR] XR_ANDROID_* extensions are never enabled https://bugs.webkit.org/show_bug.cgi?id=304349

Reviewed by Fujii Hironori.

Both XR_ANDROID_raycast and XR_ANDROID_trackables must be enabled at
instance creation time before using them. The current code does not do
that and thus extensions cannot be used even if available. What it
worst, this causes crashes as the code assumes that extensions are
enabled if available.

* Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.cpp:
(WebKit::OpenXRCoordinator::createInstance):

Canonical link: https://commits.webkit.org/304662@main